--- a/src/main/resources/com/joutvhu/jenkins/multibranch/triggers/PipelineTriggerProperty/help-jobExcludeFilter.html
+++ b/src/main/resources/com/joutvhu/jenkins/multibranch/triggers/PipelineTriggerProperty/help-jobExcludeFilter.html
@@ -1,5 +1,5 @@
 <div>
     Space-separated list of name patterns to consider. You may use * as a wildcard; for example: master release*<br>
-    <b>Actions Trigger Jobs will not be build for the branches which are excluded by this filter.</b><br>
-    <b>Important: Exclude Filter overwrites Include Filter.</b>
+    <b>Actions Trigger Jobs will not be build for the jobs which are excluded by this filter.</b><br>
+    <b>Important: Job Exclude Filter overwrites Job Include Filter.</b>
 </div>
